Add marker styles for event/location

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,3 +21,15 @@ body {
   width: 20px;
   height: 20px;
 }
+
+.marker-location {
+  background-color: blue;
+  width: 10px;
+  height: 10px;
+}
+
+.marker-event {
+  background-color: orange;
+  width: 20px;
+  height: 20px;
+}
