--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,10 @@ body {
   font-size: 1rem;
   line-height: 1.3rem;
 
+  .location {
+    font-size: 0.8rem;
+  }
+
   a, a:visited {
     color: blue;
   }
