--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@ body {
   height: 100vh;
 }
 
-.mapboxgl-popup-content {
+.maplibregl-popup-content {
   font-size: 1rem;
   line-height: 1.3rem;
 
