Fix API reading bugs, improve styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,8 +15,12 @@ body {
   font-size: 1rem;
   line-height: 1.3rem;
 
-  .location {
-    font-size: 0.8rem;
+  h3 {
+    margin: 0;
+  }
+
+  .collection {
+    font-size: 0.9rem;
   }
 
   a, a:visited {
